[package]
name = "grpc-demo"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = "*"
#num-complex = "0.4.2"
futures = "0.3.25"
tonic = {version="0.8.3", features=["tls","gzip"]}
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
prost = "0.11.3"
tokio = {version= "1.23.0",features = ["full"]}
tokio-stream = "0.1.12"
log = "0.4.17"
env_logger = "0.10.0"
etcd-client = {version = "0.10.2", features = ["tls"]}
clap = "4.1.11"
h2 = { version = "0.3" }
async-stream = "0.3.4"
futures-util = "0.3.28" # async中使用异步锁futures_util::lock::Mutex

#[dev-dependencies]
#etcd-client = {version = "0.10.2", features = ["tls"]}

[build-dependencies]
tonic-build = "0.8.4"
